fix(eww): make date widget readable

--- a/config/eww/date/date.scss
+++ b/config/eww/date/date.scss
@@ -1,8 +1,8 @@
 .date {
-  background-color: $bg;
+  background-color: rgba(40, 42, 54, 0.8);
   color: $fg;
   border-radius: 30px;
-  border: 5px solid $contrastbg;
+  border: 2px solid $contrastbg;
 }
 
 .timebox {
@@ -27,12 +27,14 @@
 
 .cal-box {
   font-family: Product Sans;
-  background-color: $bg;
+  background-color: rgba(40, 42, 54, 0.8);
   border-radius: 15px;
   padding: 0 1rem .2rem;
   color: $fg;
-  background-color: $contrastbg;
-  margin: 0px 12px 12px 12px;
+  background-color: $bg;
+  border-bottom: 2px solid $contrastbg;
+  border-top: 2px solid $contrastbg;
+  margin: 0px 12px 18px 12px;
 
   .cal {
     background-color: inherit;
